--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
 			</div>
 			<div class="row footer_bottom justify-content-center">
 				<p class="col-lg-8 col-sm-12 footer-text">
-					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made by iamctz
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+					
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved| This template is made by iamctz using colorlib
+</p>
 			</div>
 		</div>
 	</footer>
